Update: Add gemini-3.1-flash-image-preview to image generation nodes

--- a/.trae/rules/11.md
+++ b/.trae/rules/11.md
@@ -1,4 +1,4 @@
-# 🤖ComfyUI-shaobkj 项目规则
+# Co🤖mfyUI-shaobkj 项目规则
 
 ### 1. 节点开发规范
 - 所有节点必须包含完整的类定义，包括 `INPUT_TYPES`、`RETURN_TYPES`、`RETURN_NAMES`、`FUNCTION`、`CATEGORY`
